Enhance CI workflow and test configuration
Updated the GitHub Actions workflow to use production builds and headless Chrome for unit tests. Added new npm scripts for CI and production builds. Improved the basic test suite and updated tsconfig.spec.json to include node types and explicitly list test files. Added a placeholder SCSS file for the goals component.

--- a/tsconfig.spec.json
+++ b/tsconfig.spec.json
@@ -4,12 +4,16 @@
   "compilerOptions": {
     "outDir": "./out-tsc/spec",
     "types": [
-      "jasmine"
+      "jasmine",
+      "node"
     ]
   },
   "include": [
     "src/**/*.spec.ts",
     "src/**/*.d.ts",
     "src/**/*.ts"
+  ],
+  "files": [
+    "src/test.spec.ts"
   ]
 }
