--- a/.github/workflows/unit-test-front-end.yml
+++ b/.github/workflows/unit-test-front-end.yml
@@ -6,7 +6,6 @@ on:
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
 
     strategy:
@@ -26,7 +25,9 @@ jobs:
       run: npm ci
 
     - name: Build Angular app
-      run: npm run build --if-present
+      run: npm run build --prod  
 
     - name: Run unit tests
-      run: npm test -- --watch=false
+      run: npm test -- --watch=false --browsers=ChromeHeadless  
+      env:
+        CI: true  
