--- a/tsconfig.spec.json
+++ b/tsconfig.spec.json
@@ -4,18 +4,10 @@
   "compilerOptions": {
     "outDir": "./out-tsc/spec",
     "types": [
-      "jasmine",
-      "node"
+      "jasmine"
     ]
   },
-  "include": [
-    "src/**/*.spec.ts",
-    "src/**/*.d.ts"
-    
-  ],
-  "exclude": [
-    "src/**/*.server.ts",
-    "src/app/app.config.server.ts",
-    "src/main.server.ts"  
+  "files": [
+    "src/test.spec.ts"
   ]
 }
