--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
     "@angular/router": "^17.3.0",
     "@ctrl/ngx-emoji-mart": "^9.2.0",
     "@ng-bootstrap/ng-bootstrap": "^16.0.0",
+    "@stomp/stompjs": "^7.1.1",
     "chart.js": "^4.5.0",
     "rxjs": "~7.8.0",
+    "sockjs-client": "^1.6.1",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
   },
@@ -32,6 +34,7 @@
     "@angular/cli": "^17.0.3",
     "@angular/compiler-cli": "^17.3.0",
     "@types/jasmine": "~5.1.0",
+    "@types/sockjs-client": "^1.5.4",
     "autoprefixer": "^10.4.21",
     "jasmine-core": "~5.1.0",
     "karma": "~6.4.0",
